--- a/backend/env.example
+++ b/backend/env.example
@@ -3,7 +3,7 @@ DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=sistema_ventas
 DB_USER=postgres
-DB_PASSWORD=tu_password
+DB_PASSWORD=
 
 # Configuración del servidor
 PORT=3001
