--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,13 +4,14 @@
   "description": "Frontend para sistema de ventas y gestión de inventarios",
   "private": true,
   "dependencies": {
+    "axios": "^1.3.4",
+    "date-fns": "^2.29.3",
+    "lucide-react": "^0.263.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.1",
-    "axios": "^1.3.4",
-    "lucide-react": "^0.263.1",
     "react-hot-toast": "^2.4.1",
-    "date-fns": "^2.29.3"
+    "react-router-dom": "^6.8.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
@@ -39,4 +40,4 @@
       "last 1 safari version"
     ]
   }
-} 
+}
