--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -7,12 +7,12 @@
     "skipLibCheck": true,
 
     /* Bundler mode */
-    "moduleResolution": "bundler",
+    "moduleResolution": "node", // 💡 FIX CLAVE: Cambiado de "bundler" a "node"
     "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx",
+    "jsx": "react-jsx",          // Clave para reconocer <div>, <button>, etc.
 
     /* Linting */
     "strict": true,
@@ -24,4 +24,4 @@
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
-} 
+}
