funcionalidad de portapapeles en Nueva Venta

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@types/react": "^19.1.10",
+    "html2canvas": "^1.4.1",
     "recharts": "^2.15.4",
     "xlsx": "^0.18.5"
   }
